syntax = "proto3";

option go_package = "ksc-mcube/rpc/pb/network";

package network;

import "common.proto";
import "network_types.proto";

service Network {
  rpc List(ListRequest) returns (ListReply) {}
  rpc Create(CreateRequest) returns (CreateReply) {}
  rpc Remove(RemoveRequest) returns (RemoveReply) {}
}

message ListRequest {
    common.RequestHeader header = 1;

    repeated int64 node_ids = 2;
}

message ListReply {
    common.RequestHeader header = 1;

    repeated RealNetworkInterface real_if = 2;
    repeated BridgeNetworkInterface bridge_if = 3;
    
}

message CreateRequest {
    common.RequestHeader header = 1;
}

message CreateReply {
    common.RequestHeader header = 1;
}

message RemoveRequest {
    common.RequestHeader header = 1;
}

message RemoveReply {
    common.RequestHeader header = 1;
}